[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/portrait/kero.png" type="Texture" id=2]
[ext_resource path="res://Assets/portrait/goto.png" type="Texture" id=3]
[ext_resource path="res://Assets/portrait/time.png" type="Texture" id=4]
[ext_resource path="res://Assets/portrait/darkgoto.png" type="Texture" id=5]
[ext_resource path="res://Assets/portrait/sword.png" type="Texture" id=6]
[ext_resource path="res://Assets/portrait/yoyo.png" type="Texture" id=7]
[ext_resource path="res://Assets/portrait/slime.png" type="Texture" id=8]
[ext_resource path="res://Assets/portrait/scythe.png" type="Texture" id=9]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_left = -0.000976563
anchor_top = 0.00529729
anchor_right = 1.00391
anchor_bottom = 1.03197
color = Color( 0.180392, 0.180392, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Container" type="Container" parent="."]
anchor_left = 0.375663
anchor_top = 0.466448
anchor_right = 0.610038
anchor_bottom = 0.616448
margin_left = 11.6541
margin_top = 131.373
margin_right = 11.6541
margin_bottom = 131.373
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Container"]
margin_left = 19.2313
margin_top = 17.1371
margin_right = 99.2312
margin_bottom = 77.1371
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Container"]
margin_left = 141.07
margin_top = 17.1371
margin_right = 221.07
margin_bottom = 77.1371
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTitle" type="Label" parent="."]
anchor_left = 0.432
anchor_right = 0.568
anchor_bottom = 0.083
margin_left = 10.2266
margin_top = 132.433
margin_right = 10.9626
margin_bottom = 132.633
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="Container" parent="."]
anchor_left = 0.324219
anchor_top = 0.0733333
anchor_right = 0.675781
anchor_bottom = 0.476667
margin_left = 11.6541
margin_top = 131.373
margin_right = 11.6541
margin_bottom = 131.373
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MainContainer"]
margin_left = 9.0
margin_top = 8.8909
margin_right = 352.0
margin_bottom = 231.891
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadDefualtPalettes" type="CheckBox" parent="MainContainer"]
margin_left = 19.7418
margin_top = 184.904
margin_right = 184.742
margin_bottom = 208.904
text = "Read Default Palettes"

[node name="GenerateDefualtPalettes" type="CheckBox" parent="MainContainer"]
margin_left = 18.6824
margin_top = 142.525
margin_right = 211.682
margin_bottom = 171.525
text = "Generate Default Palettes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilenameInput" type="LineEdit" parent="MainContainer"]
margin_left = 192.308
margin_top = 96.4757
margin_right = 333.308
margin_bottom = 120.476
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefualtCharacterLabel" type="Label" parent="MainContainer"]
margin_left = -5.41901
margin_top = 40.0324
margin_right = 160.581
margin_bottom = 62.0324
text = "Default Character:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilenameLabel" type="Label" parent="MainContainer"]
margin_left = 20.8014
margin_top = 96.9681
margin_right = 186.801
margin_bottom = 118.968
text = "Default Palette Filename: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterSelect" type="OptionButton" parent="MainContainer"]
margin_left = 147.539
margin_top = 31.23
margin_right = 295.539
margin_bottom = 70.23
text = "Shoto Goto"
icon = ExtResource( 3 )
items = [ "Shoto Goto", ExtResource( 3 ), false, 0, null, "Yo Yona", ExtResource( 7 ), false, 1, null, "Dr Kero", ExtResource( 2 ), false, 2, null, "Don McRon", ExtResource( 4 ), false, 3, null, "Dark Goto", ExtResource( 5 ), false, 4, null, "Slime Bros", ExtResource( 8 ), false, 5, null, "Vince Volt", ExtResource( 6 ), false, 6, null, "Reaper", ExtResource( 9 ), false, 7, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Container/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Container/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="MainContainer/ReadDefualtPalettes" to="." method="_on_ReadDefualtPalettes_toggled"]
[connection signal="toggled" from="MainContainer/GenerateDefualtPalettes" to="." method="_on_GenerateDefualtPalettes_toggled"]
[connection signal="text_changed" from="MainContainer/FilenameInput" to="." method="_on_FilenameInput_text_changed"]
